@@ -48,9 +48,6 @@ The FFT routine used was written by Laurent de Soras and freely
 available for use (see notes in code).<br>
 <br>
 <br>
- alt="Back" border="0" height="32" width="32"></a>
- border="0" height="32" width="32"></a><a href="toc.html"><img
- src="home.png" alt="Home" border="0" height="32" width="32"></a>
 <a href="fi.html" target="_self"><img src="back.png" border="0" width="32" height="32" alt="Back"></a>
 <a href="math.html" target="_self"><img src="next.png" border="0" width="32" height="32" alt="Next"></a>
 <a href="toc.html"><img src="home.png" border="0" width="32" height="32" alt="Home"></a>
